# NomadGrapheneParser

./: log.json  log2.json  nomad.yaml  pyproject.toml
graphene_parser/: __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
graphene_parser/metainfo/: __init__.py  graphene.py  graphene_parser.py
tests/: test_parser.py
tests/data/: input_graphene.yml
