[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'graphene_parser'
version = '1.0'
description = 'NOMAD Graphene Parser'
readme = "README.md"
authors = [{ name = "Fabian Li" }]
license = { file = "LICENSE" }
dependencies = [
    # "nomad-lab[infrastrucutre]",
    'numpy'
]

#[project.urls]
#homepage = "https://github.com/nomad-coe/atomistic-parsers"

[project.optional-dependencies]
tests = [
    'mypy==0.750',
    'pylint==2.3.1',
    'pylint_plugin_utils==0.5',
    'pycodestyle==2.8.0',
    'pytest==3.10.0',
    'pytest-timeout==1.4.2',
    'pytest-cov==2.7.1',
    'astroid==2.5.1'
]

[tool.setuptools]
packages = ["graphene_parser", "graphene_parser.metainfo"]

[tool.setuptools.package-data]
graphene_parser = ['metadata.yaml']
